db/MyNewGrammar.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MyNewGrammar.java */
package sql;
import java.util.Iterator;
import org.json.JSONArray;
import org.json.JSONObject;

public class MyNewGrammar/*@bgen(jjtree)*/implements MyNewGrammarTreeConstants, MyNewGrammarConstants {/*@bgen(jjtree)*/
  protected static JJTMyNewGrammarState jjtree = new JJTMyNewGrammarState();public static void main(String args [])
  {
    MyNewGrammar t = new MyNewGrammar(System.in);
    System.out.println("please input sql sentences");
    while(true){
        try
    {
      System.out.print(">>");
      SimpleNode node = t.Start();
      new SemanticReader(node);
      t.ReInit(System.in);
    }
    catch (Exception e)
    {
      System.out.println(e.getMessage());
      t.ReInit(System.in);
    }
    }
  }


  public static void combineConditions(CSet set,Object a,Object b){
            set.put(a);
            set.put(b);
  }

/** Root production. */
  static final public SimpleNode Start() throws ParseException {
 /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Statement();
      jj_consume_token(36);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Statement() throws ParseException {
 /*@bgen(jjtree) Statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case USE:
        Use();
        break;
      case SHOW:
        Show();
        break;
      case CREATE:
        Create();
        break;
      case EXIT:
        Exit();
        break;
      case DROP:
        Drop();
        break;
      case SELECT:
        Select();
        break;
      case INSERT:
        Insert();
        break;
      case DELETE:
        Delete();
        break;
      case UPDATE:
        Update();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

//-----�?�?----------
  static final public void Exit() throws ParseException {
 /*@bgen(jjtree) Exit */
  SimpleNode jjtn000 = new SimpleNode(JJTEXIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(EXIT);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//-----使用数据�?-----
  static final public void Use() throws ParseException {
 /*@bgen(jjtree) Use */
  SimpleNode jjtn000 = new SimpleNode(JJTUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(USE);
      DB();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//-------展示�?------
  static final public void Show() throws ParseException {
              /*@bgen(jjtree) Show */
  SimpleNode jjtn000 = new SimpleNode(JJTSHOW);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SHOW);
      jj_consume_token(KW_TABLE);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*--------------------------------------------------------*/
//---------类型------------
  static final public void Type() throws ParseException {
              /*@bgen(jjtree) Type */
              SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
              boolean jjtc000 = true;
              jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case KW_INT:
        t = jj_consume_token(KW_INT);
        break;
      case KW_BOOL:
        t = jj_consume_token(KW_BOOL);
        break;
      case KW_STR:
        t = jj_consume_token(KW_STR);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setName(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Table() throws ParseException {
               /*@bgen(jjtree) Table */
               SimpleNode jjtn000 = new SimpleNode(JJTTABLE);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setName(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Tables() throws ParseException {
                /*@bgen(jjtree) Tables */
  SimpleNode jjtn000 = new SimpleNode(JJTTABLES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Table();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 37:
        jj_consume_token(37);
        Tables();
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public String Table_Column() throws ParseException {
                        /*@bgen(jjtree) Table_Column */
                        SimpleNode jjtn000 = new SimpleNode(JJTTABLE_COLUMN);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t,s=null;
    try {
      t = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        jj_consume_token(38);
        s = jj_consume_token(ID);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    String result="";
    result += t.image;
    if(s!=null) {result+="."+s.image;}
    jjtn000.setName(result);
    {if (true) return result;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Column() throws ParseException {
                /*@bgen(jjtree) Column */
                SimpleNode jjtn000 = new SimpleNode(JJTCOLUMN);
                boolean jjtc000 = true;
                jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
    jjtn000.setName(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void DB() throws ParseException {
            /*@bgen(jjtree) DB */
            SimpleNode jjtn000 = new SimpleNode(JJTDB);
            boolean jjtc000 = true;
            jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
    jjtn000.setName(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//--------------定义-----------
  static final public void P_Key() throws ParseException {
               /*@bgen(jjtree) P_Key */
  SimpleNode jjtn000 = new SimpleNode(JJTP_KEY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(P_KEY);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Check() throws ParseException {
               /*@bgen(jjtree) Check */
  SimpleNode jjtn000 = new SimpleNode(JJTCHECK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CHECK);
      operator();
      rightComp();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setName("check");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Unique() throws ParseException {
                /*@bgen(jjtree) Unique */
  SimpleNode jjtn000 = new SimpleNode(JJTUNIQUE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(UNIQUE);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setName("unqiue");
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  static final public void Constraint() throws ParseException {
                    /*@bgen(jjtree) Constraint */
  SimpleNode jjtn000 = new SimpleNode(JJTCONSTRAINT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UNIQUE:
        Unique();
        break;
      case CHECK:
        Check();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Definition() throws ParseException {
                    /*@bgen(jjtree) Definition */
  SimpleNode jjtn000 = new SimpleNode(JJTDEFINITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Column();
      Type();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case P_KEY:
      case UNIQUE:
      case CHECK:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case P_KEY:
          P_Key();
          break;
        case CHECK:
          Check();
          break;
        case UNIQUE:
          Unique();
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      _Definition();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//消除左�?�归
  static final public void _Definition() throws ParseException {
                     /*@bgen(jjtree) _Definition */
  SimpleNode jjtn000 = new SimpleNode(JJT_DEFINITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 37:
        jj_consume_token(37);
        Column();
        Type();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case UNIQUE:
        case CHECK:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case CHECK:
            Check();
            break;
          case UNIQUE:
            Unique();
            break;
          default:
            jj_la1[7] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[8] = jj_gen;
          ;
        }
        _Definition();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//-------------------视图-----------------
  static final public void View() throws ParseException {
              /*@bgen(jjtree) View */
  SimpleNode jjtn000 = new SimpleNode(JJTVIEW);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(KW_VIEW);
      Table();
      jj_consume_token(AS);
      Select();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//-----------------创建语句-------------
  static final public void Create() throws ParseException {
                /*@bgen(jjtree) Create */
  SimpleNode jjtn000 = new SimpleNode(JJTCREATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CREATE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case KW_TABLE:
        jj_consume_token(KW_TABLE);
        Table();
        jj_consume_token(39);
        Definition();
        jj_consume_token(40);
        break;
      case KW_DATABASE:
        jj_consume_token(KW_DATABASE);
        DB();
        break;
      case KW_VIEW:
        View();
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*--------------------------------------------------------*/
//---------------选择目标-----------
  static final public void Star_All() throws ParseException {
                  /*@bgen(jjtree) Star_All */
                   SimpleNode jjtn000 = new SimpleNode(JJTSTAR_ALL);
                   boolean jjtc000 = true;
                   jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(STAR);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setName(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Target() throws ParseException {
                /*@bgen(jjtree) Target */
  SimpleNode jjtn000 = new SimpleNode(JJTTARGET);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
        Star_All();
        break;
      case ID:
        Table_Column();
        TargetFollow();
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void TargetFollow() throws ParseException {
                      /*@bgen(jjtree) TargetFollow */
  SimpleNode jjtn000 = new SimpleNode(JJTTARGETFOLLOW);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 37:
        jj_consume_token(37);
        Table_Column();
        TargetFollow();
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//----------------选择，删除，修改条件 引用Level1---------------
  static final public String leftComp() throws ParseException {
                    /*@bgen(jjtree) leftComp */
                    SimpleNode jjtn000 = new SimpleNode(JJTLEFTCOMP);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);String t="";
    try {
      t = Table_Column();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return t;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String rightComp() throws ParseException {
                     /*@bgen(jjtree) rightComp */
                     SimpleNode jjtn000 = new SimpleNode(JJTRIGHTCOMP);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);String value;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STR:
        value = String();
                      jjtree.closeNodeScope(jjtn000, true);
                      jjtc000 = false;
                      {if (true) return value.replaceAll("'","");}
        break;
      case NUM:
        value = Num();
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
                   {if (true) return value;}
        break;
      case BOOL:
        value = Bool();
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
                   {if (true) return value;}
        break;
      case ID:
        value = Table_Column();
                            jjtree.closeNodeScope(jjtn000, true);
                            jjtc000 = false;
                            {if (true) return value;}
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String operator() throws ParseException {
                    /*@bgen(jjtree) operator */
                    SimpleNode jjtn000 = new SimpleNode(JJTOPERATOR);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);Token op;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 41:
        op = jj_consume_token(41);
        break;
      case 42:
        op = jj_consume_token(42);
        break;
      case 43:
        op = jj_consume_token(43);
        break;
      case 44:
        op = jj_consume_token(44);
        break;
      case 45:
        op = jj_consume_token(45);
        break;
      case 46:
        op = jj_consume_token(46);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if(op.image.equals(">")){ op.image=">>"; }
    if(op.image.equals("<")){ op.image="<<"; }
    jjtn000.setName(op.image);
    {if (true) return op.image;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Condition Condition() throws ParseException {
                        /*@bgen(jjtree) Condition */
                        SimpleNode jjtn000 = new SimpleNode(JJTCONDITION);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);String col,op,value;
    try {
      col = leftComp();
      op = operator();
      value = rightComp();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    Condition cond = new Condition(col,op,value);
    SimpleNode node= (SimpleNode) jjtn000.jjtGetChild(2).jjtGetChild(0);
    if(node.ntType().equals("Table_Column")){
                cond.rightIsColumn();
    }
    {if (true) return cond;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }
